# apfsds.rs

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  apfsds-specs.md  config.example.toml  daemon.example.toml
.claude/: settings.local.json
.github/workflows/: check.yml  docker.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
client/: Cargo.toml  README.md
client/src/: config.rs  doh.rs  emergency.rs  lib.rs  local_dns.rs  main.rs  mobile.rs  socks5.rs  tun_device.rs  wss.rs
crates/crypto/: Cargo.toml  README.md
crates/crypto/src/: aes.rs  hmac_auth.rs  keys.rs  lib.rs  replay.rs
crates/obfuscation/: Cargo.toml  README.md
crates/obfuscation/src/: compression.rs  decoy.rs  lib.rs  padding.rs  timing.rs  xor_mask.rs
crates/protocol/: Cargo.toml  README.md
crates/protocol/src/: auth.rs  frame.rs  lib.rs  validation.rs
crates/raft/: Cargo.toml  README.md
crates/raft/src/: lib.rs  log_storage.rs  network.rs  node.rs  state_machine.rs  storage.rs  type_config.rs  types.rs
crates/storage/: Cargo.toml  README.md
crates/storage/src/: blink_tree.rs  clickhouse_backup.rs  engine.rs  lib.rs  postgres.rs  segment.rs  wal.rs
crates/transport/: Cargo.toml  README.md
crates/transport/src/: exit_client.rs  exit_pool.rs  frame_codec.rs  lib.rs  mtls.rs  noise.rs  pool.rs  quic.rs  ssh.rs  wss_client.rs  wss_server.rs
daemon/: Cargo.toml  README.md
daemon/src/: auth.rs  billing.rs  config.rs  config_tests.rs  connection_registry.rs  emergency.rs  exit_forwarder.rs  exit_node.rs  exit_node_pool.rs  geoip.rs  handler.rs  key_rotation.rs  main.rs  management.rs  management_dashboard.rs  metrics.rs  noise.rs  plugin.rs
deploy/: install.sh  partition_test.sh  vmware_deploy.sh
deploy/repo/: apfsds-0.1.0.tgz  index.yaml
docs/: api.md  architecture.md  comparison.md  configuration.md  deployment-scenarios.md  deployment.md  security.md  testing-plan.md  user-guide.md
helm-chart/: Chart.yaml  values.yaml
helm-chart/templates/: configmap.yaml  deployment.yaml  hpa.yaml  secret.yaml  service.yaml  servicemonitor.yaml
scripts/: install.sh
tests/: Cargo.toml  README.md  handshake.rs  integration_harness.rs  raft_cluster.rs  socks5_tunnel.rs  tun_mode.rs
