[package]
name = "apfsds-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "apfsds"
path = "src/main.rs"

[lib]
name = "apfsds_client"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
apfsds-protocol = { path = "../crates/protocol" }
apfsds-crypto = { path = "../crates/crypto" }
apfsds-transport = { path = "../crates/transport" }
apfsds-obfuscation = { path = "../crates/obfuscation" }

tokio.workspace = true
futures.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
crates_io_api.workspace = true
fastrand.workspace = true

# TUN device
tun.workspace = true

# CLI
clap = { version = "4", features = ["derive"] }
rkyv.workspace = true
tokio-tungstenite.workspace = true

[target.'cfg(windows)'.dependencies]
wintun = "0.4"
