[package]
name = "apfsds-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "APFSDS client - censorship-resistant proxy client (SOCKS5/TUN)"

[[bin]]
name = "apfsds"
path = "src/main.rs"

[lib]
name = "apfsds_client"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
apfsds-protocol = { path = "../crates/protocol", version = "0.2.0" }
apfsds-crypto = { path = "../crates/crypto", version = "0.2.0" }
apfsds-transport = { path = "../crates/transport", version = "0.2.0" }
apfsds-obfuscation = { path = "../crates/obfuscation", version = "0.2.0" }

tokio.workspace = true
futures.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
crates_io_api.workspace = true
fastrand.workspace = true

# TUN device
tun.workspace = true

# CLI
clap = { version = "4", features = ["derive"] }
rkyv.workspace = true
tokio-tungstenite.workspace = true

[target.'cfg(windows)'.dependencies]
wintun = "0.4"

