[package]
name = "apfsds-tests"
version = "0.3.0"
edition = "2024"
publish = false

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "test-util"] }
futures = "0.3"

# HTTP client for API tests
reqwest = { version = "0.12", features = ["json"] }

# Utilities
anyhow = "1"

# Platform-specific
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[[test]]
name = "handshake"
path = "handshake.rs"

[[test]]
name = "socks5_tunnel"
path = "socks5_tunnel.rs"

[[test]]
name = "raft_cluster"
path = "raft_cluster.rs"

[[test]]
name = "tun_mode"
path = "tun_mode.rs"

