[package]
name = "apfsds-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cryptographic primitives for APFSDS (X25519, AES-GCM, Ed25519)"

[dependencies]
aes-gcm.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
ml-dsa.workspace = true
ml-kem.workspace = true
kem.workspace = true
pkcs8.workspace = true
signature.workspace = true
hmac.workspace = true
sha2.workspace = true
rand.workspace = true
thiserror.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
base64.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

