[package]
name = "apfsds-obfuscation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true
fastrand.workspace = true
zstd.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
rand.workspace = true
