[package]
name = "apfsds-obfuscation"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Traffic obfuscation layer for APFSDS (XOR masking, padding, timing)"

[dependencies]
bytes.workspace = true
fastrand.workspace = true
zstd.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
rand.workspace = true
