[package]
name = "apfsds-raft"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
apfsds-protocol = { path = "../protocol" }
apfsds-storage = { path = "../storage" }

tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
