[package]
name = "apfsds-raft"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
apfsds-protocol = { path = "../protocol" }
apfsds-storage = { path = "../storage" }

tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-raft = { workspace = true }
anyhow = "1.0"
async-trait = "0.1"
reqwest = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
