[package]
name = "apfsds-raft"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Raft consensus layer for APFSDS distributed coordination"

[dependencies]
apfsds-protocol = { path = "../protocol", version = "0.4.0" }
apfsds-storage = { path = "../storage", version = "0.4.0" }

tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-raft = { workspace = true }
anyhow = "1.0"
async-trait = "0.1"
reqwest = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

