[package]
name = "apfsds-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
apfsds-protocol = { path = "../protocol", version = "0.1.0" }

tokio.workspace = true
rkyv.workspace = true
thiserror.workspace = true
tracing.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
bytes.workspace = true
clickhouse.workspace = true
serde.workspace = true
byteorder = "1.4"
crc32fast = "1.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"
