[package]
name = "apfsds-transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
apfsds-protocol = { path = "../protocol" }
apfsds-crypto = { path = "../crypto" }
apfsds-obfuscation = { path = "../obfuscation" }

tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
bytes.workspace = true
rkyv.workspace = true
thiserror.workspace = true
tracing.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
fastrand.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
hyper.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
